[package]
name = "pr-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
base64 = "0.21.4"
clap = { version = "4.4.6", features = ["derive"] }
confy = "0.5.1"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }
