[package]
name = "pr-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
async-trait = "0.1.73"
base64 = "0.21.4"
block-modes = "0.9.1"
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
confy = "0.5.1"
console = "0.15.7"
futures = "0.3.28"
hex-literal = "0.4.1"
pbkdf2 = "0.12.2"
reqwest = { version = "0.11.22", features = ["json"] }
ring = "0.17.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sha2 = "0.10.8"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }
